--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1327,6 +1327,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="time-tracking.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
   <script src="script.js"></script>
   
   <script>
