--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1325,7 +1325,7 @@
   <!-- Scripts -->
    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="time-tracking.js"></script>
+  <!-- <script src="time-tracking.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
   <script src="script.js"></script>
